[project]
name = "tenforce"
version = "1.0.0"
description = "Type enforcement for Python"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.2", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tenforce*"]
exclude = ["docs*", "tests*"]