[project]
name = "tenforce"
version = "0.1.3"
description = "Type enforcement for Python"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.2", "Cython==0.29.34"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tenforce*"]
exclude = ["docs*", "tests*"]